# Slate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
cli/: main.cpp
core/: ApplicationContext.cpp  ApplicationContext.hpp
docs/: Architecture.md  Build-System.md  Coding-Standards.md  Database.md  Plugin-System.md  Roadmap.md
graph/: Graph.cpp  Graph.hpp
scanner/: Scanner.cpp  Scanner.hpp
storage/: Database.cpp  Database.hpp
ui/: MainWindow.cpp  MainWindow.hpp  main.cpp
